adding the country-codes to mobile .n

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@progress/kendo-angular-buttons": "18.1.0",
     "@progress/kendo-angular-common": "18.1.0",
     "@progress/kendo-angular-dateinputs": "18.1.0",
